bugfix: styles: home page title was overflowing on mobile dimensions. adjusted font size for all screen sizes.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,7 +20,7 @@ code {
 
 #homepage-brand {
   font-family: "Gwendolyn", cursive;
-  font-size: 8em;
+  font-size: 6em;
   font-weight: bold;
   text-align: center;
   margin: .5em auto;
